# jmd

./: .gitignore  AGENT.hub.md  AGENT.md  PROJECT.readme.md  README.md  package.json  pnpm-lock.yaml  prettier.config.cjs  pyproject.toml
.codex/: index.json
.codex/latest/: last_output.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-tests.yml  frontend-tests.yml  guards.yml
agents/AgentAssignment/: agent.py
agents/AgentAvailability/: agent.py
agents/AgentCompliance/: agent.py
agents/AgentDataOps/: agent.py
agents/AgentDocs/: agent.py
agents/AgentFinance/: README.md  agent.py
agents/AgentImportExport/: agent.py
agents/AgentIntegrations/: agent.py
agents/AgentInventory/: __init__.py  agent.py
agents/AgentLLMEvaluator/: agent.py
agents/AgentNotifications/: agent.py
agents/AgentObservability/: agent.py
agents/AgentPayroll/: agent.py
agents/AgentPlanner/: agent.py
agents/AgentQA/: agent.py
agents/AgentScheduling/: agent.py
agents/AgentSchema/: agent.py
agents/AgentSecurity/: agent.py
agents/AgentTimesheet/: agent.py
agents/AgentUISystem/: agent.py
docs/: CHANGELOG.md
docs/agents/: AGENT.AgentAssignment.md  AGENT.AgentAvailability.md  AGENT.AgentCompliance.md  AGENT.AgentDataOps.md  AGENT.AgentDocs.md  AGENT.AgentFinance.md  AGENT.AgentImportExport.md  AGENT.AgentIntegrations.md  AGENT.AgentInventory.md  AGENT.AgentLLMEvaluator.md  AGENT.AgentNotifications.md  AGENT.AgentObservability.md  AGENT.AgentPayroll.md  AGENT.AgentPlanner.md  (+16 more)
schemas/: person.json
tests/: COVERAGE_PLAN.md
tools/: rename_repo.ps1
(+187 files in other folders)
