[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jmd-backend"
description = "Backend FastAPI service for the JMD planning platform"
version = "0.1.0"
readme = "PROJECT.readme.md"
requires-python = ">=3.11"
authors = [{ name = "JMD Team" }]
dependencies = [
    "fastapi>=0.110,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.6,<3.0",
    "email-validator>=2.0,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "typing-extensions>=4.10,<5.0",
    "uvicorn[standard]>=0.27,<1.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=backend --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests/backend"]

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
